--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@crossmint/client-sdk-aa": "^0.2.8",
+    "@crossmint/client-sdk-walletconnect": "^1.1.6",
     "@web3auth/base": "^8.4.0",
     "@web3auth/ethereum-provider": "^8.4.0",
     "@web3auth/modal": "^8.4.0",
